# Wordpress-Installation-Script

./: .gitignore  Makefile  README.md  generate_template  make_wp_compose_project.py  pyproject.toml  wordpress_install.py
src/: wordpress_setup.py
